fix(css): remove duplicate styles and realign each card heading

--- a/practice-one/src/styles/sections/benefits.css
+++ b/practice-one/src/styles/sections/benefits.css
@@ -15,30 +15,32 @@
   align-items: center;
   box-sizing: border-box; /* need to apply this style again */
   width: 1060px;
-  height: 304px;
+  padding: 70px;
   background-color: var(--background-color-card);
 
+  background-repeat: no-repeat;
+  background-position: right 110px center;
+
   &:nth-of-type(1) {
-    padding: 25px 110px 25px 38px;
     background-image: url("../../assets/images/working-hour.png");
-    background-repeat: no-repeat;
-    background-position: right 110px top 25px;
   }
 
   &:nth-of-type(2) {
     flex-direction: row-reverse;
     margin-left: 85px;
-    padding: 39px 161px 39px 110px;
     background-image: url("../../assets/images/earning.png");
-    background-repeat: no-repeat;
-    background-position: left 110px top 39px;
+    background-position: left 110px center;
   }
 
   &:nth-of-type(3) {
-    padding: 57px 114px 48px 38px;
     background-image: url("../../assets/images/support.png");
-    background-repeat: no-repeat;
-    background-position: right 114px top 57px;
+    padding-top: calc(70px - 21px);
+    padding-bottom: calc(70px + 21px);
+
+    & .benefit-content {
+      width: 520px;
+      height: 47px;
+    }
   }
 }
 
@@ -48,18 +50,20 @@
 
 .benefit-heading {
   display: flex;
-  align-items: center;
   gap: 0 39px;
   font-size: var(--font-size-xl);
   line-height: 32.5px;
   font-weight: var(--font-weight-semi-bold);
-  text-transform: none;
 
   & .heading-number {
     font-size: var(--font-size-5xl);
     line-height: 119px;
     font-weight: var(--font-weight-medium);
     color: var(--color-text-tertiary);
+  }
+
+  & .heading-text {
+    padding-top: calc(119px - 88px);
   }
 }
 
